grammar.js
        document: $ => repeat($._node),

        _node: $ => choice(
            $.doctype,
            $.entity,
            $.text,
            $.element,
            $.script_element,
            $.style_element,
            $.erroneous_end_tag,
            $.comment,
        ),

        element: $ => choice(
            seq(
                $.start_tag,
                repeat($._node),
                choice($.end_tag, $._implicit_end_tag),
            ),
            $.self_closing_tag,
        ),

        start_tag: $ => seq(
            '<',
            alias($._start_tag_name, $.tag_name),
            repeat($._attributes),
            '>',
        ),

        _attributes: $ => choice(
             $.th_attribute, 
             $.attribute, 
        ),


        th_attribute_value: $ => $._th_std_expression, 

        end_tag: $ => seq(
            '</',
            alias($._end_tag_name, $.tag_name),
            '>',
        ),

        th_attribute: $ => seq(
            token(prec(PREC.TH_STD_EXPRESSION, 'th:')) ,
            choice(
                seq(field("attribute_name",$._th_generic), '=', '"', optional(field("attribute_value", $.th_attribute_value)), '"'),
                seq(field("attribute_name",$._th_spel_only), '=', '"', optional(field("attribute_value", $.spel_th_std_expression)),'"'),
                seq(field("attribute_name",$._th_assignation_sequence), '=', '"', optional(field("attribute_value", $.th_assignation_sequence)),'"'),
                seq(field("attribute_name",$.th_fragment), '=', '"',optional(field("attribute_value", $.th_fragment_declaration)),'"'),
                seq(field("attribute_name",$.th_inline), '=', '"', optional(field("attribute_value", $._th_inline_value)),'"'),
                seq(field("attribute_name",$.th_remove), '=', '"', optional(field("attribute_value", $._th_remove_value)),'"'),
                seq(field("attribute_name",$.th_each), '=', '"', optional(field("attribute_value", $.th_each_value)),'"'),
                seq(field("attribute_name",$._th_fragments_insert), '=', '"', optional(field("attribute_value", $._fragment_std_expression,)),'"'),
            ),
        ),

        attribute: $ => seq(
            $.attribute_name,
            optional(seq(
                '=',
                choice(
                    $.attribute_value,
                    $.quoted_attribute_value,
                ),
            )),
        ),

        attribute_name: _ => /[^<>"'/=\s]+/,


        _th_inline_value : $ => choice(
            $.inline_text,
            $.inline_javascript,
            $.inline_none
        ),

        th_each_value : $ => seq(
            $.each_element, 
            optional(seq(
                ',',
                $.iterStat,
            )),
            ':',
            $.spel_th_std_expression,
        ),

        iterStat : _ =>/[a-zA-Z]+/,

        each_element : _ => /[a-zA-Z]+/,

        _th_remove_value : $ => choice(
            $.remove_all,
            $.remove_body,
            $.remove_tag,
            $.remove_abf,
            $.remove_none,
        ),

        remove_all : _ => 'all',
        remove_body : _ => 'body',
        remove_tag : _ => 'tag',
        remove_abf : _ => 'all-but-first',
        remove_none : _ => 'none',

        inline_text : _ => 'text',
        th_fragment_declaration : $ => seq(
            $.fragment_name,
            seq(
                '(',
                commaSep($.fragment_arg),
                ')'
            )
        ),

        //WTF THYMELEAF
        //This regex is wrong because you can actually put parenthesis in the name of the fragment
        fragment_name : _ => /[^\.%\/\(\)]+/ ,

        //exemple of a perfectly valid thymeleaf arg :
        //1${!}c\acçççèèa__--1*
        //(this is not satire)
        fragment_arg : _ => /[^\.%,\(\)\/]+/,


        th_assignation_sequence: $ => seq(
            commaSep1(seq(
                field('name' , $.attribute_name),
                '=',
                field("value", $._th_std_expression) 
            )),
            optional(','),
        ),

        _th_generic: $ => choice(
            $.th_if,
            $.th_switch,
            $.th_case,
            $.th_unless,
            $.th_generic,
        ),

        _th_fragments_insert : $ => choice(
            $.th_insert,
            $.th_replace,
        ),

        _th_spel_only: $ => choice(
            $.th_object,
            $.th_with,
        ),

        _th_assignation_sequence : $ => choice(
            $.th_attr,
            $.th_attrappend,
            $.th_attrprepend,
        ),

        th_insert: $ => 'insert',
        th_replace: $ => 'replace',
        th_each: $ => 'each',
        th_object: $ => 'object',
        th_attrappend: $ => 'attrappend',
        th_remove: $ => 'remove',

        //specific
        th_fragment: $ => 'fragment',
        th_inline : $ => 'inline',
        th_generic : $ => /[^<>"'/=\s]+/,

        quoted_attribute_value: $ => choice(
            seq('\'', optional(alias(/[^']+/, $.attribute_value)), '\''),
            seq('"', optional(alias(/[^"]+/, $.attribute_value)), '"'),
        ),

        true_literal: _ => 'true',
        false_literal: _ => 'false',
        null_literal: _ => 'null',

        number_literal : _ => seq(
            /[0-9]+/,
            optional(seq(
                '.',
                /[0-9]+/,
            ))
        ),
        
        token_literal: _ => repeat1(
            seq(
                optional(/[\-\+]/),
                /[a-zA-Z\-_\.]+/,
            ),
        ),

        string_literal: $ => choice(
            $._interpreted_string_literal,
        ),

        _interpreted_string_literal: $ => seq(
            "'",
            repeat(choice(
                $._interpreted_string_literal_basic_content,
                $._escape_sequence,
            )),
            "'",
        ),

        _interpreted_string_literal_basic_content: _ => token.immediate(prec(1, /[^'\\]+/)),

        _escape_sequence: _ => token.immediate(seq(
            '\\',
            /./
        )),

        add: $ => '+',
        _th_std_expression: $ => choice(
            $.unary_th_std_expression,
            $.binary_th_std_expression,
            $.ternary_th_std_expression,
            $.parenthesized_th_std_expression,
            $._literal,
            $.spel_th_std_expression,
            $.varselect_th_std_expression,
            $.message_th_std_expression,
            $.url_th_std_expression,
            $.fragment_th_std_expression,
        ),

        url_th_std_expression : $ => seq(
            '@{',
            optional($._url_std_expression),
            '}',
        ),

        message_th_std_expression : $ => seq(
            '#{',
            optional($._message_std_expression),
            '}',
        ),

        spel_th_std_expression : $ => seq(
            '${',
            optional($._spel_std_expression),
            '}',
        ),

        _url_std_expression : $ => seq(
            optional('/'),
            repeat(seq(
                choice(
                    $.standard_url_fragment,
                    $.parameterized_url_fragment
                ),
                '/'
            )),  
            choice(
                $.standard_url_fragment,
                $.parameterized_url_fragment
            ),
            optional('/'),
            optional(seq(
                '(',
                commaSep($.url_parameter_assignement),
                ')',
            ))
               
        ),

        _fragment_std_expression : $ => prec(PREC.FRAGMENT_EXPRESSION, seq(
            choice(
                $.standard_url,
                $._th_std_expression
            ),
            optional(seq(
                '::',
                $.fragment_call
            ))
        )),

        fragment_call : $ => seq(
            $._th_std_expression,
            optional(seq(
                '(',
                commaSep($._th_std_expression),
                ')',
            ))
        ),

        url_parameter_assignement : $ => seq(
            field("param", $.url_parameter),
            '=',
            field("value", $._th_std_expression)
        ),

        standard_url : _ => /[0-9a-zA-Z_\-\/\.]+/,
        standard_url_fragment : _ => /[0-9a-zA-Z_\-\.]+/,

        url_parameter : _ => /[0-9a-zA-Z_]+/,

        message_name : $ => seq(
            optional(seq(
                /[0-9a-zA-Z_]+/,
                '.'
            )),
            /[0-9a-zA-Z_]+/,
        ), 

        _message_std_expression : $ => seq(
            field("message", $.message_name),
            field("args", 
                optional(seq(
                    '(',
                        commaSep($._th_std_expression),
                    ')',
                ))
            )
        ),

        binary_th_std_expression: $ => choice(
            ...[
                [$.greater_than, PREC.REL],
                [$.lesser_than, PREC.REL],
                [$.greater_or_equal, PREC.REL],
                [$.lesser_or_equal, PREC.REL],
                [$.greater_than_2, PREC.REL],
                [$.lesser_than_2, PREC.REL],
                [$.greater_or_equal_2, PREC.REL],
                [$.lesser_or_equal_2, PREC.REL],
                [$.equal, PREC.EQUALITY],
                [$.equal_2, PREC.EQUALITY],
                [$.not_equal, PREC.EQUALITY],
                [$.not_equal_2, PREC.EQUALITY],
                [$.and, PREC.AND],
                [$.and_2, PREC.AND],
                [$.or, PREC.OR],
                [$.or_2, PREC.OR],
                [$.add, PREC.ADD],
                [$.substract, PREC.ADD],
                [$.multiply, PREC.MULT],
                [$.divide, PREC.MULT],
                [$.modulo, PREC.MULT],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('left', $._th_std_expression),
                    field('operator', operator),
                    field('right', $._th_std_expression)
                ))
            )),

        //spel 
        _spel_std_expression : $ => choice(
            $._spel_primary_expression,
            $.binary_spel_expression,
            $.java_ref,
            $.unary_spel_expression,
            $.ternary_spel_expression,
            $.elvis_expression,
            $._creation,
            $.spel_parenthesized_expression,
            $.spel_assignement_expression,
        ),

        integer_literal: _ => seq(
            /[0-9]+/,
        ),

        float_literal: _ => seq(
            /[0-9]+/,
            '.',
            /[0-9]+/,
            'f',
        ),
        double_literal: _ => seq(
            /[0-9]+/,
            '.',
            /[0-9]+/,
        ),

        spel_string_literal : $ => seq(
            "'",
            repeat(choice(
                $._interpreted_string_literal_basic_content,
                $._escape_sequence,
            )),
            "'",
            optional($._spel_post_accessor),
        ),

        inline_list : $ => seq(
            '{',
            commaSep($._spel_std_expression),
            '}',
            optional($._spel_post_accessor),
        ),

        inline_map : $ => choice(
            seq(
            '{',
            commaSep1(seq(
                field("key", $._spel_std_expression),
                ':',
                field("value", $._spel_std_expression),
            )),
            '}',
            optional($._spel_post_accessor),
            ),
            seq('{:}', optional($._spel_post_accessor))
        ),

        binary_spel_expression : $ => choice(
            ...[
                [$.and, PREC.AND],
                [$.and_2, PREC.AND],
                [$.or, PREC.OR],
                [$.or_2, PREC.OR],
                [$.equal, PREC.EQUALITY],
                [$.equal_2, PREC.EQUALITY],
                [$.not_equal, PREC.EQUALITY],
                [$.not_equal_2, PREC.EQUALITY],
                [$.greater_than, PREC.REL],
                [$.lesser_than, PREC.REL],
                [$.greater_or_equal, PREC.REL],
                [$.greater_or_equal_2, PREC.REL],
                [$.lesser_or_equal, PREC.REL],
                [$.lesser_or_equal_2, PREC.REL],
                [$.add, PREC.ADD],
                [$.substract, PREC.ADD],
                [$.multiply, PREC.MULT],
                [$.divide, PREC.MULT],
                [$.modulo, PREC.MULT],
                [$.exp, PREC.EXP],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('left', $._spel_std_expression),
                    field('operator', operator),
                    field('right', $._spel_std_expression)
                ))
            ),
            prec.left(PREC.INSTANCE_OF, seq(
                    field('left', $._spel_std_expression),
                    field('operator', $.spel_between),
                    field('right', $.range)
            )),
            prec.left(PREC.INSTANCE_OF, seq(
                    field('left', $._spel_std_expression),
                    field('operator', $.spel_instanceof),
                    field('right', $.type)
            )),
            prec.left(PREC.INSTANCE_OF, seq(
                    field('left', $._spel_std_expression),
                    field('operator', $.spel_matches),
                    field('right', $.string_literal)
            )),
        ),

        _spel_post_accessor : $ => choice(
            $.spel_property_access,
            $.spel_method_access,
            $.spel_projection,
        ),

        spel_object_expression : $ => seq(
            /[A-Za-z_]+/,
            repeat(/[0-9A-Za-z_]/),
            optional($._spel_post_accessor),
        ),

        spel_property_name : $ => $._spel_name,

        spel_property_access : $ => choice(
            seq(
                choice($.null_operator, '.'),
                field('name',$.spel_property_name),
                optional($._spel_post_accessor),
            ),
            seq(
                '[',
                field('name',$._spel_std_expression),
                ']',
                optional($._spel_post_accessor)
            )
        ),

        spel_method_access : $ => seq(
            choice($.null_operator, '.'),
            $.spel_method_expression,
        ),

        spel_method_expression : $ => seq(
            field('name', $.spel_method_name),
            field('args', $.spel_method_args),
            optional($._spel_post_accessor),
        ),

        _spel_name : $ => seq(
            /[A-Za-z_]+/,
            repeat(/[0-9A-Za-z_]/),
        ),

        spel_method_args : $ => seq(
            '(',
            commaSep($._spel_std_expression),
            ')',
        ), 
    }
});


function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)))
}

function commaSep(rule) {
  return optional(commaSep1(rule))
}
