test/corpus/attributes.txt
================================================================================
TH Generic
================================================================================

<div 
    class=""
    th:test=""
    th:insert=""
    th::test=""
    hx-on::before-request=""
    ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (th_attribute
        attribute_name: (th_generic))
      (th_attribute
        attribute_name: (th_insert))
      (th_attribute
        attribute_name: (th_generic))
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (end_tag
      (tag_name))))

================================================================================
TH Attribute Types
================================================================================

<div 
    class=""
    th:each=""
    th:insert=""
    th:replace=""
    th:text=""
    th:attrappend=""
    th:inline=""
    th:object=""
    ></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (th_attribute
        attribute_name: (th_each))
      (th_attribute
        attribute_name: (th_insert))
      (th_attribute
        attribute_name: (th_replace))
      (th_attribute
        attribute_name: (th_generic))
      (th_attribute
        attribute_name: (th_attrappend))
      (th_attribute
        attribute_name: (th_inline))
      (th_attribute
        attribute_name: (th_object)))
    (end_tag
      (tag_name))))

================================================================================
TH Spel Only attribute 
================================================================================

<div th:object="${}" ></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        (th_object)
        (spel_th_std_expression)))
    (end_tag
      (tag_name))))


================================================================================
TH Spel Only attribute ERROR
================================================================================

<div th:object="'test' + ${}" ></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        (th_object)
        (ERROR)
        (spel_th_std_expression)))
    (end_tag
      (tag_name))))


================================================================================
TH Fragment reference
================================================================================

<div th:replace="test :: test"></div>
<div th:insert="test :: test"></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_replace)
        attribute_value: (fragment_std_expression
          (token_literal)
          (fragment_call
            (token_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_insert)
        attribute_value: (fragment_std_expression
          (token_literal)
          (fragment_call
            (token_literal)))))
    (end_tag
      (tag_name))))

================================================================================
TH Fragment reference ERROR
================================================================================

<div th:text="test :: test()"></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (token_literal))
        (ERROR)))
    (end_tag
      (tag_name))))

================================================================================
TH Inline
================================================================================

<div th:inline="text"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_inline)
        attribute_value: (inline_text)))
    (end_tag
      (tag_name))))

================================================================================
TH Inline ERROR
================================================================================

<div th:inline="txt"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_inline)
        (ERROR)))
    (end_tag
      (tag_name))))


================================================================================
TH Each
================================================================================

<div th:each="test, iterTest : ${test}"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_each)
        attribute_value: (th_each_value
          (each_element)
          (iterStat)
          (spel_th_std_expression
            (spel_object_expression)))))
    (end_tag
      (tag_name))))


================================================================================
TH Remove
================================================================================

<div th:remove="all"></div>
<div th:remove="body"></div>
<div th:remove="tag"></div>
<div th:remove="all-but-first"></div>
<div th:remove="none"></div>
<div th:remove="test"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        attribute_value: (remove_all)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        attribute_value: (remove_body)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        attribute_value: (remove_tag)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        attribute_value: (remove_abf)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        attribute_value: (remove_none)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_remove)
        (ERROR)))
    (end_tag
      (tag_name))))


================================================================================
TH Assignation sequence
================================================================================

<div th:attrappend="class='bg-' + 'red-500'"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_attrappend)
        attribute_value: (th_assignation_sequence
          name: (attribute_name)
          value: (binary_th_std_expression
            left: (string_literal)
            operator: (add)
            right: (string_literal)))))
    (end_tag
      (tag_name))))
