test/corpus/fragment-insertion.dialect.txt
================================================================================
INSERT base
================================================================================

<div th:insert="test"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_insert)
        attribute_value: (fragment_std_expression
          (token_literal))))
    (end_tag
      (tag_name))))


================================================================================
INSERT with reference and args
================================================================================

<div th:insert="test :: test(1,2)"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_insert)
        attribute_value: (fragment_std_expression
          (token_literal)
          (fragment_call
            (token_literal)
            (frag_insert_params
              (number_literal)
              (number_literal))))))
    (end_tag
      (tag_name))))

================================================================================
INSERT with url 
================================================================================

<div th:insert="test/test/test :: test(1,2)"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_insert)
        attribute_value: (fragment_std_expression
          (standard_url)
          (fragment_call
            (token_literal)
            (frag_insert_params
              (number_literal)
              (number_literal))))))
    (end_tag
      (tag_name))))

================================================================================
INSERT with only standard dialect 
================================================================================

<div th:insert="'test/'+'test/'+'test' :: 'test'(1,2)"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_insert)
        attribute_value: (fragment_std_expression
          (binary_th_std_expression
            left: (binary_th_std_expression
              left: (string_literal)
              operator: (add)
              right: (string_literal))
            operator: (add)
            right: (string_literal))
          (fragment_call
            (string_literal)
            (frag_insert_params
              (number_literal)
              (number_literal))))))
    (end_tag
      (tag_name))))
