test/corpus/message.dialect.txt
================================================================================
MSG Base
================================================================================

<div th:text="#{message.test}"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute 
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (message_th_std_expression
            message: (message_name)))))
    (end_tag
      (tag_name))))


================================================================================
MSG Args
================================================================================

<div th:text="#{message.test(2, 'test')}"></div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (message_th_std_expression 
            message: (message_name)
            (method_args
              (number_literal)
              (string_literal))))))
    (end_tag
      (tag_name))))
