test/corpus/spel.txt
================================================================================
SPEL Literals
================================================================================

<div th:text="${1.1}"> </div>
<div th:text="${1.1f}"> </div>
<div th:text="${1}"> </div>
<div th:text="${'1'}"> </div>
<div th:text="${true}"> </div>
<div th:text="${false}"> </div>
<div th:text="${null}"> </div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag 
      (tag_name)
      (th_attribute 
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (double_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (float_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (integer_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (spel_string_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value 
          (spel_th_std_expression
            (true_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (false_literal)))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (null_literal)))))
    (end_tag
      (tag_name))))

================================================================================
SPEL Inline list
================================================================================

<div th:text="${{1,3,43,9}}"> </div>
<div th:text="${{}}"> </div>

--------------------------------------------------------------------------------
(document
  (element 
    (start_tag 
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (inline_list
              (integer_literal)
              (integer_literal)
              (integer_literal)
              (integer_literal))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (inline_list)))))
    (end_tag
      (tag_name))))

================================================================================
SPEL Inline map
================================================================================

<div th:text="${{test_1: 1, test_2 : 34}['test_1']}"> </div>
<div th:text="${{:}}"> </div>

--------------------------------------------------------------------------------
(document
  (element 
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (inline_map
              key: (spel_object_expression)
              value: (integer_literal)
              key: (spel_object_expression)
              value: (integer_literal)
              (spel_property_access
                name: (spel_string_literal)))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (inline_map)))))
    (end_tag
      (tag_name))))

================================================================================
SPEL Object expression
================================================================================

<div th:text="${bonjour['test'].boulgour.test(1+2, 'test')}"> </div>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (spel_th_std_expression
            (spel_object_expression
              (spel_property_access
                name: (spel_string_literal)
                (spel_property_access
                  name: (spel_property_name)
                  (spel_method_access
                    (spel_method_expression
                      args: (spel_method_args
                        (binary_spel_expression
                          left: (integer_literal)
                          operator: (add)
                          right: (integer_literal))
                        (spel_string_literal)))))))))))
    (end_tag
      (tag_name))))
