test/corpus/url-dialect.txt
================================================================================
URL Base 
================================================================================

<a th:href="@{my/url?t@st=test}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (url_th_std_expression
            (standard_url_fragment)
            (standard_url_fragment)))))
    (end_tag
      (tag_name))))


================================================================================
URL Parameterized
================================================================================

<a th:href="@{my/{param}/url?t@st=test}"></a>

--------------------------------------------------------------------------------
(document
  (element 
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (url_th_std_expression
            (standard_url_fragment)
            (url_parameter)
            (standard_url_fragment)))))
    (end_tag
      (tag_name))))

================================================================================
URL Assignement
================================================================================

<a th:href="@{my/{param}/url(param='test', test='test')}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (url_th_std_expression
            (standard_url_fragment)
            (url_parameter)
            (standard_url_fragment)
            (url_parameter_assignement
              param: (token_literal)
              value: (string_literal))
            (url_parameter_assignement 
              param: (token_literal)
              value: (string_literal))))))
    (end_tag
      (tag_name))))

================================================================================
URL Assignement Edge case
================================================================================

<a th:href="@{my/{param}/url(param='test', 'te' + ${'st'}='test')}"></a>

--------------------------------------------------------------------------------
(document
  (element
    (start_tag
      (tag_name)
      (th_attribute
        attribute_name: (th_generic)
        attribute_value: (th_attribute_value
          (url_th_std_expression
            (standard_url_fragment)
            (url_parameter)
            (standard_url_fragment)
            (url_parameter_assignement
              param: (token_literal)
              value: (string_literal))
            (url_parameter_assignement
              param: (binary_th_std_expression
                left: (string_literal)
                operator: (add)
                right: (spel_th_std_expression
                  (spel_string_literal)))
              value: (string_literal))))))
    (end_tag
      (tag_name))))

